[package]
name = "quarantine-gg"
version = "0.1.0"
authors = ["Brett Kolodny <brettkolodny@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.2"
clap = {version = "2.33.0", features = ["yaml"] }
